# generic-type-erasure

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  generic-type-erasure-impl.hpp  generic-type-erasure.hpp  type-helpers.hpp  type-map.hpp
tests/: .test-generic-type-erasure.cpp.swp  CMakeLists.txt  test-examples.cpp  test-generic-type-erasure.cpp  test-type-helpers.cpp  test-type-map.cpp  tests.cpp
